# axum-channels

./: Cargo.toml
examples/: basic.rs
src/: channel.rs  lib.rs  main.rs  message.rs  registry.rs  tests.rs  types.rs
tests/: lifecycle.rs
