[package]
name = "axum-channels"
version = "0.1.0"
edition = "2021"
authors = ["Zach Kemp <zvkemp@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.4.2", features = ["ws"] }
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tokio-stream = { version = "*", features = ["sync"] }
tokio-util = "*"
tracing = "*"
http = "*"
lazy_static = "*"

[dev-dependencies]
tokio-tungstenite = "*"
tungstenite = "*"
tracing-subscriber = "*"
